--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Liberty Walk</title>
   </head>
   <body>
-    <p>This is liberty walk website test.</p>
-    <p>Klk man</p>
+    <header>
+      <img src="img/logo.png" alt="logo">
+      <ul>
+        <li> <a href="index.html">Inicio</a> </li>
+        <li> <a href="#">Nosotros</a></li>
+        <li> <a href="#">BodyKits</a></li>
+        <li> <a href="#">Dealers</a></li>
+        <li> <a href="#">Contacto</a>
+          <ul>
+            <li> <a href="#">Distribución</a></li>
+            <li> <a href="#">Asesoría</a> </li>
+
+          </ul>
+        </li>
+        .
+
+      </ul>
+    </header>
   </body>
 </html>
