Working on the header, menu and other stuff

--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Liberty Walk</title>
+    <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
-    <header>
-      <img src="img/logo.png" alt="logo">
-      <ul>
-        <li> <a href="index.html">Inicio</a> </li>
-        <li> <a href="#">Nosotros</a></li>
-        <li> <a href="#">BodyKits</a></li>
-        <li> <a href="#">Dealers</a></li>
-        <li> <a href="#">Contacto</a>
+
+
+
+    <!-- NOTE: CABECERA CON IMAGEN DE FONDO -->
+    <section id="contbanner">
+    <!-- NOTE: OVERLAY NEGRO PARA LA IMG DE FONGO -->
+    <div id="blackoverlay"></div>
+
+      <!-- NOTE: INICIO DEL HEADER -->
+      <header>
+        <img src="img/logo1.png" alt="logo" id="logoheader">
+        <nav>
+
           <ul>
-            <li> <a href="#">Distribución</a></li>
-            <li> <a href="#">Asesoría</a> </li>
-
+            <li> <a href="index.html">Inicio</a> </li>
+            <li> <a href="">Nosotros</a></li>
+            <li> <a href="#">BodyKits</a></li>
+            <li> <a href="#">Dealers</a></li>
+            <li> <a href="#">Contacto</a>
+              <ul>
+                <li> <a href="#">Distribución</a></li>
+                <li> <a href="#">Asesoría</a> </li>
+              </ul>
+            </li>
           </ul>
-        </li>
-        .
-
-      </ul>
-    </header>
+        </nav>
+      </header>
+    </section>
   </body>
 </html>
