ya toy resolviendo el menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <ul>
             <li> <a href="index.html">Inicio</a> </li>
-            <li> <a href="">Nosotros</a></li>
+            <li> <a href="#">Nosotros</a></li>
             <li> <a href="#">BodyKits</a></li>
             <li> <a href="#">Dealers</a></li>
             <li> <a href="#">Contacto</a>
