--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           </ul>
         </nav>
       </header>
+
+      <h1>SOMOS <b>LIBERTY WALK</b></h1>
+
+
     </section>
   </body>
 </html>
