--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
               <li class="newdropdown"> <a href="#" class="dropdown">BodyKits</a>
                 <div class="dropdcont">
-                  <a href="#">LB WORKS</a>
-                  <a href="#">LB PERFORMACE</a>
-                  <a href="#">LB NATION</a>
+                  <a href="bodykits/lbworks.html">LB WORKS</a>
+                  <a href="bodykits/lbperformance.html">LB PERFORMACE</a>
+                  <a href="bodykits/lbnation.html">lb★nation</a>
                 </div>
               </li>
               <li> <a href="#">Dealers</a></li>
@@ -64,9 +64,85 @@
       </div>
 
     <section id="contenido">
-      <h2>Bodykits en venta</h1>
-      <p>Tenemos una gran cantidad de Body-Kits para el vehiculo que necesites.</p>
+      <h2>BODYKITS EN VENTA</h1>
+      <p>En Liberty Walk, tenemos una gran cantidad de Body-Kits para el vehiculo que tengas.</p>
+
+      <div class="columnafotos">
+
+        <a href="bodykits/lbworks.html">
+          <div class="fila">
+            <img src="img/home/foto1.jpg" alt="" class="foto3">
+            <h3>LB WORKS</h3>
+          </div>
+        </a>
+
+        <a href="bodykits/lbperformance.html">
+          <div class="fila">
+            <img src="img/home/foto2.jpg" alt="" class="foto3">
+            <h3>LB PERFORMANCE</h3>
+          </div>
+        </a>
+
+        <a href="bodykits/lbnation.html">
+          <div class="fila">
+            <img src="img/home/foto3.jpg" alt="" class="foto3">
+            <h3>lb★nation</h3>
+          </div>
+        </a>
+
+      </div>
+
     </section>
+
+
+<div class="stripe"></div>
+
+    <footer>
+
+      <div class="footercontained">
+
+        <div class="linkbar">
+
+          <div class="footrcolumna">
+
+            <div class="footrfila">
+                <i class="fas fa-hands"></i>
+                <a href="agradecimientos.html">Agradecimientos</a>
+              </div>
+
+              <div class="footrfila">
+                <i class="fas fa-user-circle"></i>
+                <a href="autor.html">Autor</a>
+              </div>
+
+              <div class="footrfila">
+                <a href="https://instagr.am/c0nvexo">Instagram Shout</a>
+              </div>
+            </div>
+
+            <div class="footrcolumna">
+
+              <div class="footrfila">
+                <h4>Visita nuestra sucursal!</h4>
+              </div>
+
+              <div class="footrfila">
+                <img src="img/map.png" alt="mapa">
+              </div>
+            </div>
+            </div>
+
+<div class="stripe"></div>
+            <div class="creditbar">
+              <div class="copyright">
+                <p>Liberty Walk Co. Todos los Derechos Reservados.</p>
+              </div>
+                <div class="frase">
+                  <p>Hecho con Amor y pila de sueño por un estudiante del ITLA.</p>
+                </div>
+            </div>
+      </div>
+    </footer>
 
   </body>
 </html>
