--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
           <div class="footrcolumna">
 
+                <h4>Mas info:</h4>
+
             <div class="footrfila">
                 <i class="fas fa-hands"></i>
                 <a href="agradecimientos.html">Agradecimientos</a>
@@ -116,6 +118,7 @@
               </div>
 
               <div class="footrfila">
+                <i class="fab fa-instagram"></i>
                 <a href="https://instagr.am/c0nvexo">Instagram Shout</a>
               </div>
             </div>
@@ -126,16 +129,18 @@
                 <h4>Visita nuestra sucursal!</h4>
               </div>
 
-              <div class="footrfila">
-                <img src="img/map.png" alt="mapa">
-              </div>
+                <div class="mapa">
+                  <img src="img/map.jpg" alt="mapa">
+                  <p>Liberty Walk, 1 Chome-178番地 Setogawacho, Owariasahi, Aichi Prefecture 488-0023, Japón</p>
+                </div>
+
             </div>
             </div>
 
 <div class="stripe"></div>
             <div class="creditbar">
               <div class="copyright">
-                <p>Liberty Walk Co. Todos los Derechos Reservados.</p>
+                <p><b>Liberty Walk Co.</b> Todos los Derechos Reservados.</p>
               </div>
                 <div class="frase">
                   <p>Hecho con Amor y pila de sueño por un estudiante del ITLA.</p>
