--- a/nosotros.html
+++ b/nosotros.html
@@ -6,6 +6,7 @@
     <title>Liberty Walk</title>
     <!-- NOTE: HOJA DE ESTILOS -->
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/portada1.css">
     <!-- NOTE: LIBRERIA DE ICONOS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <!-- NOTE: Libreria JQUERY -->
@@ -57,39 +58,25 @@
 
         <!-- NOTE: OVERLAY NEGRO PARA LA IMG DE FONGO -->
         <div id="blackoverlay">
-          <h1>SOMOS <b>LIBERTY WALK</b></h1>
+          <h1>NUESTRA <b>CULTURA</b></h1>
         </div>
         <!-- NOTE: CABECERA CON IMAGEN DE FONDO -->
         <section id="contbanner"></section>
       </div>
 
     <section id="contenido">
-      <h2>BODYKITS EN VENTA</h1>
-      <h5>En Liberty Walk, tenemos una gran cantidad de Body-Kits para el vehiculo que tengas.</h5>
+      <h2>SOBRE NOSOTROS</h1>
+      <p>La vision de Wataru Kato</p>
 
       <div class="columnafotos">
 
-        <a href="bodykits/lbworks.html">
           <div class="fila">
-            <img src="img/home/foto1.jpg" alt="" class="foto3">
-            <h3>LB WORKS</h3>
+            <img src="img/nosotros/foto1.jpg" alt="" class="fotoind">
           </div>
-        </a>
 
-        <a href="bodykits/lbperformance.html">
           <div class="fila">
-            <img src="img/home/foto2.jpg" alt="" class="foto3">
-            <h3>LB PERFORMANCE</h3>
-          </div>
-        </a>
-
-        <a href="bodykits/lbnation.html">
-          <div class="fila">
-            <img src="img/home/foto3.jpg" alt="" class="foto3">
-            <h3>lb★nation</h3>
-          </div>
-        </a>
-
+          <p class="parrafoind">Liberty Walk fue establecida por Wataru Kato cuando tenía 26 años. El negocio se operó por primera vez en un pequeño lote de vehículos donde solo podían exhibir 3 autos. Liberty Walk ha evolucionado a lo largo de su historia hasta convertirse en uno de los nombres más importantes en la afinación automotriz. En pocas palabras, no hay otra marca por ahí que sea tan valiente o que parezca que captura al zeitgeist actual como esta marca.</p>
+        </div>
       </div>
 
     </section>
