mostly all the stuff

--- a/bodykits/lbnation.html
+++ b/bodykits/lbnation.html
@@ -6,7 +6,7 @@
     <title>Liberty Walk</title>
     <!-- NOTE: HOJA DE ESTILOS -->
     <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/lbworks.css">
+    <link rel="stylesheet" href="../css/lbnation.css">
     <!-- NOTE: LIBRERIA DE ICONOS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <!-- NOTE: Libreria JQUERY -->
@@ -58,32 +58,32 @@
 
         <!-- NOTE: OVERLAY NEGRO PARA LA IMG DE FONGO -->
         <div id="blackoverlay">
-          <h1>LB <b>WORKS</b></h1>
+          <h1>lb <b>★nation</b></h1>
         </div>
         <!-- NOTE: CABECERA CON IMAGEN DE FONDO -->
         <section id="contbanner"></section>
       </div>
 
     <section id="contenido">
-      <h2>TRACK A STREET</h1>
-      <p>Inspirado en los vehiculos de Carreras y llevados en escencia a las calles.</p>
+      <h2>El mejor "bang for the buck"</h1>
+      <p>Estilo agresivo y caracteristico para los que son entry-level</p>
 
       <div class="columnafotos">
         <div class="fila">
-        <img src="../img/lbworks/foto1.jpg" alt="foto" class="foto3"></div>
+        <img src="../img/lbnation/foto1.jpg" alt="foto" class="foto3"></div>
         <div class="fila">
-        <img src="../img/lbworks/foto2.jpg" alt="foto" class="foto3"></div>
+        <img src="../img/lbnation/foto2.jpg" alt="foto" class="foto3"></div>
         <div class="fila">
-        <img src="../img/lbworks/foto3.jpg" alt="foto" class="foto3"></div>
+        <img src="../img/lbnation/foto3.jpg" alt="foto" class="foto3"></div>
       </div>
       <div class="columnafotos">
 
           <div class="fila">
-            <img src="../img/lbworks/foto4.jpg" alt="" class="fotoind">
+            <img src="../img/lbnation/foto4.jpg" alt="" class="fotoind">
           </div>
 
           <div class="fila">
-          <p class="parrafoind">LB WORKS es conocida por ser la marca con la calificación más alta en la línea de kits de carrocería LB PERFORMANCE. La filosofía de LB WORKS se basó en el equipo de carreras NISSAN WORKS de los años 70, en el que los coches deportivos de guardabarros que eran más bajos eran comunes. El concepto de LB WORKS era combinar la idea y aplicarla al SUPER CAR moderno.</p>
+          <p class="parrafoind">lb ★nation es la nueva linea de bodykits centrada en vehiculos domesticos de entrada, se caracteriza por tener un menor costo que las demas lineas manteniendo un estilo ingualable y agresivo, tipico de Liberty Walk. En este caso viene un Kit de Aero solamente con difusores frontales y traseros, fenders y alerones.</p>
         </div>
       </div>
 
