--- a/bodykits/lbperformance.html
+++ b/bodykits/lbperformance.html
@@ -44,7 +44,7 @@
                   <a href="../bodykits/lbnation.html">lb★nation</a>
                 </div>
               </li>
-              <li> <a href="dealers.html">Dealers</a></li>
+              <li> <a href="../dealers.html">Dealers</a></li>
 
               <li class="newdropdown"> <a href="" class="dropdown">Contacto</a>
                 <div class="dropdcont">
@@ -65,8 +65,8 @@
       </div>
 
     <section id="contenido">
-      <h2>PERFORMANCE</h1>
-      <p>CON UN KIT DE SUSPENSION</p>
+      <h2>TODO COMPLETO</h1>
+      <p>Con suspensión y escaoe, estos son los kit que cambiaran tu auto completamente.</p>
 
       <div class="columnafotos">
         <div class="fila">
@@ -107,12 +107,12 @@
 
             <div class="footrfila">
                 <i class="fas fa-hands"></i>
-                <a href="agradecimientos.html">Agradecimientos</a>
+                <a href="../agradecimientos.html">Agradecimientos</a>
               </div>
 
               <div class="footrfila">
                 <i class="fas fa-user-circle"></i>
-                <a href="autor.html">Autor</a>
+                <a href="../autor.html">Autor</a>
               </div>
 
               <div class="footrfila">
