--- a/contacto/asesoria.html
+++ b/contacto/asesoria.html
@@ -6,7 +6,7 @@
     <title>Liberty Walk</title>
     <!-- NOTE: HOJA DE ESTILOS -->
     <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/lbworks.css">
+    <link rel="stylesheet" href="../css/dealers.css">
     <!-- NOTE: LIBRERIA DE ICONOS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <!-- NOTE: Libreria JQUERY -->
@@ -24,7 +24,7 @@
     <div id="topart">
         <!-- NOTE: INICIO DEL HEADER -->
         <header>
-          <a href="../index.html">
+          <a href="index.html">
           <img src="../img/logo1.png" alt="logo" id="logoheader">
           </a>
 
@@ -58,32 +58,48 @@
 
         <!-- NOTE: OVERLAY NEGRO PARA LA IMG DE FONGO -->
         <div id="blackoverlay">
-          <h1>LB <b>WORKS</b></h1>
+          <h1>DEALERS <b>INTERNACIONALES</b></h1>
         </div>
         <!-- NOTE: CABECERA CON IMAGEN DE FONDO -->
         <section id="contbanner"></section>
       </div>
 
     <section id="contenido">
-      <h2>TRACK A STREET</h1>
-      <p>Inspirado en los vehiculos de Carreras y llevados en escencia a las calles.</p>
+      <h2>NUESTROS DEALERS</h1>
+      <p>Comercializamos bodykits y autos de manera internacional.</p>
 
       <div class="columnafotos">
-        <div class="fila">
-        <img src="../img/lbworks/foto1.jpg" alt="foto" class="foto3"></div>
-        <div class="fila">
-        <img src="../img/lbworks/foto2.jpg" alt="foto" class="foto3"></div>
-        <div class="fila">
-        <img src="../img/lbworks/foto3.jpg" alt="foto" class="foto3"></div>
+        <img src="../img/dealers/foto1.jpg" alt="" class="fotoindwide">
       </div>
+
       <div class="columnafotos">
 
-          <div class="fila">
-            <img src="../img/lbworks/foto4.jpg" alt="" class="fotoind">
-          </div>
+        <div class="fila">
+
+        <h4>LTMOTORWERKS (USA)</h4>
+        <p class="parrafoind">
+
+          5442 N. Peck Road, El Monte, CA 91732 <br>
+
+          626.452.8321<br>
+
+          www.ltmotorwerks.com <br>
+
+          info@ltmotorwerks.com</p>
+      </div>
 
           <div class="fila">
-          <p class="parrafoind">LB WORKS es conocida por ser la marca con la calificación más alta en la línea de kits de carrocería LB PERFORMANCE. La filosofía de LB WORKS se basó en el equipo de carreras NISSAN WORKS de los años 70, en el que los coches deportivos de guardabarros que eran más bajos eran comunes. El concepto de LB WORKS era combinar la idea y aplicarla al SUPER CAR moderno.</p>
+
+          <h4>NUR PERFORMANCE (USA)</h4>
+          <p class="parrafoind">
+
+            11766 Metro Parkway STE-A, Fort Myers, FL 33966, USA <br>
+
+            239 672 8347 <br>
+
+            www.nurperformance.com <br>
+
+            sales@nurperformance.com</p>
         </div>
       </div>
 
@@ -112,7 +128,7 @@
 
               <div class="footrfila">
                 <i class="fas fa-user-circle"></i>
-                <a href="../autor.html">Autor</a>
+                <a href="../sautor.html">Autor</a>
               </div>
 
               <div class="footrfila">
@@ -128,7 +144,7 @@
               </div>
 
                 <div class="mapa">
-                  <img src="../img/map.jpg" alt="mapa">
+                  <img src="img/map.jpg" alt="mapa">
                   <p>Liberty Walk, 1 Chome-178番地 Setogawacho, Owariasahi, Aichi Prefecture 488-0023, Japón</p>
                 </div>
 
