--- a/bodykits/lbworks.html
+++ b/bodykits/lbworks.html
@@ -65,7 +65,7 @@
       </div>
 
     <section id="contenido">
-      <h2>TRACK A STREET</h1>
+      <h2>DE TRACK A STREET</h1>
       <p>Inspirado en los vehiculos de Carreras y llevados en escencia a las calles.</p>
 
       <div class="columnafotos">
