--- a/dealers.html
+++ b/dealers.html
@@ -6,7 +6,7 @@
     <title>Liberty Walk</title>
     <!-- NOTE: HOJA DE ESTILOS -->
     <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/dealers.css">
+    <link rel="stylesheet" href="css/asesoria.css">
     <!-- NOTE: LIBRERIA DE ICONOS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <!-- NOTE: Libreria JQUERY -->
