fix (sautor por autor.html)

--- a/contacto/asesoria.html
+++ b/contacto/asesoria.html
@@ -125,7 +125,7 @@
 
               <div class="footrfila">
                 <i class="fas fa-user-circle"></i>
-                <a href="../sautor.html">Autor</a>
+                <a href="../autor.html">Autor</a>
               </div>
 
               <div class="footrfila">
