--- a/contacto/distribucion.html
+++ b/contacto/distribucion.html
@@ -24,7 +24,7 @@
     <div id="topart">
         <!-- NOTE: INICIO DEL HEADER -->
         <header>
-          <a href="index.html">
+          <a href="../index.html">
           <img src="../img/logo1.png" alt="logo" id="logoheader">
           </a>
 
